--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -958,7 +958,7 @@
 		Ukrainian:"Усі робочі пустельні клітинки в місті (крім затоплених рівнин) дають їжі +1 і виробництва +1"
 		German:"+1 Nahrung und +1 Produktion von allen bewirtschafteten Wüstenfeldern in der Stadt (außer Flussauen)"
 		Korean:"도시에서 작업하는 사막 타일(범람원 제외) 하나당 식량 +1, 생산력 +1"
-		Spanish:"+1 de comida y de produccion a todos los bloques de desierto trabajado sobre la ciudad (excepto a los campos de comida)
+		Spanish:"+1 de comida y de produccion a todos los bloques de desierto trabajado sobre la ciudad (excepto a los campos de comida)"
 }
 
 	"+6 Culture when discovering Archeology":{
