--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -2276,7 +2276,7 @@
 		Russian:"'Придите ко Мне все трудящиеся и обремененные, и Я успокою вас.' - Евангелие от Матфея, 11:28"
 		Ukrainian:"'Прийдіть до Мене, усі струджені та обтяжені, і Я вас заспокою!' - Євангеліє Від Матвія 11:28"
 		Korean:"'고생하며 무거운 짐을 진 너희는 모두 나에게 오너라. 내가 너희에게 안식을 주겠다.' - 성경, 마태복음 11:28"
-		French:"'Venez à moi, vous tous qui êtes fatigués et chargés, et je vous donnerai du repos." - Nouveau Testament, Matthieu 11:28"
+		French:"'Venez à moi, vous tous qui êtes fatigués et chargés, et je vous donnerai du repos.' - Nouveau Testament, Matthieu 11:28"
 }
 
 	"Culture cost of adopting new Policies reduced by 10%":{
