Using nuclear weapons has large diplomatic reprecussions

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -792,7 +792,11 @@
 		Czech:"Vaše arogantní požadavky jsou dalším důkazem vaší zkaženosti"
 		German:"Ihre arroganten Forderungen sind geschmacklos."
 		Korean:"이치에 맞지 않는 요구를 하고 있군요."
-}
+	}
+
+	"Your use of nuclear weapons is disgusting!": {
+
+	}
 
 
 ////// City-States Types
