correct spelling of "Fascism" policy

--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -1709,7 +1709,7 @@
 		Korean:"유닛을 금으로 구매하는 비용 -33%"
 }
 
-	"Facism":{
+	"Fascism":{
 		Spanish:"Facismo"
 		Italian:"Fascismo"
 		Romanian:"Fascism"
